--- a/css/style.css
+++ b/css/style.css
@@ -1335,3 +1335,32 @@ ul, ol {
 		height: 100% !important;
 	}
 }
+
+.site-logo img{
+	width: 70%;
+}
+
+
+/* ===scrollbar ==== */
+
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey; 
+	border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #da0d2b; 
+	border-radius: 32px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #da0d2b; 
+  }
