--- a/sass/_default.scss
+++ b/sass/_default.scss
@@ -6,12 +6,20 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700&display=swap');
 
- html,
+ html {
+	 height: 100%;
+	 overflow-x: hidden;
+	 position: relative;
+ }
+
  body {
 	 height: 100%;
 	 font-family: $font_1;
 	 -webkit-font-smoothing: antialiased;
 	 background: $bg_1;
+	 position: relative;
+	 margin: 0;
+	 padding: 0;
  }
  
  h1,
@@ -85,3 +93,40 @@
 		max-width: 1200px;
 	}
  }
+
+/*----------------------------------------*/
+/* Particles Background
+/*----------------------------------------*/
+#particles-js {
+	position: fixed !important;
+	width: 100vw !important;
+	height: 100vh !important;
+	top: 0 !important;
+	left: 0 !important;
+	z-index: 0 !important;
+	opacity: 0.3;
+	pointer-events: none !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	overflow: hidden;
+}
+
+#particles-js canvas {
+	position: fixed !important;
+	top: 0 !important;
+	left: 0 !important;
+	width: 100% !important;
+	height: 100% !important;
+	z-index: 0 !important;
+	pointer-events: none !important;
+}
+
+body {
+	position: relative;
+	z-index: 1;
+}
+
+body > *:not(#particles-js):not(#preloder) {
+	position: relative;
+	z-index: 1;
+}
