--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,8 @@
  .footer-section {
    padding: 26px 40px 22px;
    overflow: hidden;
+   position: relative;
+   z-index: 1;
    @media #{$large_mobile,$small_mobile} {
     text-align: center;
   }
