--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,14 +4,20 @@
 .header-section {
     padding: 24px 35px 14px 40px;
     overflow: hidden;
+    position: relative;
+    z-index: 100;
 }
 .site-logo {
     display: inline-block;
     padding-top: 5px;
+    position: relative;
+    z-index: 101;
 }
 .menu-switch {
     float: right;
     cursor: pointer;
+    position: relative;
+    z-index: 101;
     i {
         color: $white_color;
         font-size: 37px;
