--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -2,6 +2,8 @@
    Hero section
  -----------------------*/
  .hero-section {
+    position: relative;
+    z-index: 1;
     @media #{$tab_device} {
         padding: 0 40px;
     }
