react logo added

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -135,7 +135,8 @@
         }
     }
     
-    .react-logo-svg {
+    .react-logo-svg,
+    .wordpress-logo-svg {
         width: 600px;
         height: 600px;
         max-width: 90%;
