--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,7 @@ ol {
   right: 0;
   display: flex;
   justify-content: flex-end;
+  padding-right: 30px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px),
   only screen and (min-width: 576px) and (max-width: 767px),
