--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,7 +8,7 @@
     z-index: 100;
 }
 .site-logo {
-    display: inline-block;
+    display: none !important;
     padding-top: 5px;
     position: relative;
     z-index: 101;
