--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,7 @@ ol {
     padding: 100px 20px 150px;
     text-align: center;
     margin: 0 auto;
+    min-height: 92vh;
   }
 }
 .hero-text .ht-cata {
@@ -452,11 +453,13 @@ ol {
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   .hero-text h2 {
     font-size: 60px;
+    line-height: 53px !important;
   }
 }
 @media (max-width: 576px) {
   .hero-text h2 {
     font-size: 40px;
+    line-height: 53px !important;
   }
 }
 .hero-text p {
@@ -493,7 +496,7 @@ ol {
   right: 0;
   display: flex;
   justify-content: flex-end;
-  padding-right: 30px;
+  padding-right: 20px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px),
   only screen and (min-width: 576px) and (max-width: 767px),
