--- a/sass/_about-page.scss
+++ b/sass/_about-page.scss
@@ -59,8 +59,10 @@
     p {
         font-size: 18px;
         padding-right: 50px;
+        color: white;
 
-        @media #{$large_mobile,$small_mobile} {
+        @media only screen and (min-width: 576px) and (max-width: 767px),
+        (max-width: 576px) {
             padding-right: 0;
         }
     }
