--- a/sass/_loader.scss
+++ b/sass/_loader.scss
@@ -1,6 +1,5 @@
-
 /* Preloder */
- #preloder {
+#preloder {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -27,19 +26,21 @@
     0% {
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
-        border: 4px solid #f44336;
+        border: 4px solid #fcc257;
         border-left-color: transparent;
     }
+
     50% {
         -webkit-transform: rotate(180deg);
         transform: rotate(180deg);
-        border: 4px solid #673ab7;
+        border: 4px solid rgba(252, 194, 87, 0.6);
         border-left-color: transparent;
     }
+
     100% {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
-        border: 4px solid #f44336;
+        border: 4px solid #fcc257;
         border-left-color: transparent;
     }
 }
@@ -47,17 +48,19 @@
 @-webkit-keyframes loader {
     0% {
         -webkit-transform: rotate(0deg);
-        border: 4px solid #f44336;
+        border: 4px solid #fcc257;
         border-left-color: transparent;
     }
+
     50% {
         -webkit-transform: rotate(180deg);
-        border: 4px solid #673ab7;
+        border: 4px solid rgba(252, 194, 87, 0.6);
         border-left-color: transparent;
     }
+
     100% {
         -webkit-transform: rotate(360deg);
-        border: 4px solid #f44336;
+        border: 4px solid #fcc257;
         border-left-color: transparent;
     }
 }
